--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,12 +1,38 @@
-.footer {
-  display: flex;
+:host {
   align-items: center;
-  justify-content: center;
-  padding: 10px;
-  color: var(--text-color);
-  position: absolute;
-  bottom: 100;
-  left: 0;
   background-color: var(--primary-color);
+  box-sizing: border-box;
+  bottom: 100;
+  color: var(--text-color);
+  display: flex;
+  height: 60px;
+  justify-content: space-between;
+  left: 0;
+  padding: 0 10px;
+  position: relative;
   width: 100%;
+}
+
+body.dark {
+  :host {
+    border-top: 1px solid #FFF;
+  }
+}
+
+.footer-item {
+  align-items: center;
+  display: flex;
+}
+
+img {
+  margin: 0 16px;
+}
+
+#linkedin-logo {
+  height: 40px;
+  margin: 0 8px;
+}
+
+#linkedin-logo:hover {
+  opacity: 0.8;
 }
