--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,5 @@
-.toolbar {
+:host {
+  box-sizing: border-box;
   position: absolute;
   top: 0;
   left: 0;
@@ -6,27 +7,24 @@
   height: 60px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: var(--primary-color);
   color: var(--text-color);
   font-weight: 600;
-  padding: 0 10px;
+  padding-left: 20px;
+  width: 100%;
+
+  .site-title {
+    cursor: pointer;
+  }
 }
 
-.toolbar img {
+body.dark {
+  :host {
+    border-bottom: 1px solid #FFF;
+  }
+}
+
+img {
   margin: 0 16px;
-}
-
-.toolbar #linkedin-logo {
-  height: 40px;
-  margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar #linkedin-logo:hover,
-.toolbar #youtube-logo:hover {
-  opacity: 0.8;
 }
