--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -7,8 +7,25 @@
   font-size: 16px;
   cursor: pointer;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  text-transform: uppercase;
 
   &:hover {
     opacity: 0.75;
+  }
+}
+
+.nav-btn {
+  background-color: transparent;
+  box-sizing: border-box;
+  color: var(--secondary-btn-text);
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  text-transform: uppercase;
+  height: 100%;
+  padding: 0 20px;
+
+  &:hover {
+    background-color: var(--button-hover-bg);
   }
 }
