Tunes navigation menu and styling
Now works more smoothly on all screen sizes and adjusts to use available
space more effectively.

--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -1,4 +1,10 @@
-<button class="nav-btn" [routerLink]="['/about']">About Me</button>
-<button class="nav-btn" [routerLink]="['/portfolio']">Portfolio</button>
-<button class="nav-btn" [routerLink]="['/connect']">Connect</button>
-<button class="nav-btn" [routerLink]="['/settings']" >Settings</button>
+<button class="nav-btn menu-toggle" (click)="toggleMenuOptions()">
+  <mat-icon fontIcon="menu"></mat-icon>
+</button>
+
+<div *ngIf="showNavOptions" class="nav-options">
+  <button class="nav-btn" [routerLink]="['/about']">About Me</button>
+  <button class="nav-btn" [routerLink]="['/portfolio']">Portfolio</button>
+  <button class="nav-btn" [routerLink]="['/connect']">Connect</button>
+  <button class="nav-btn" [routerLink]="['/settings']" >Settings</button>
+</div>
