--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,8 @@ body {
   --secondary-btn-text: #333;
   --button-hover-bg: #EEE;
   --app-background-color: #FFF;
+
+  --banner-height: 50px;
 }
 
 body.dark {
