--- a/src/app/connect/connect.component.scss
+++ b/src/app/connect/connect.component.scss
@@ -1,8 +1,5 @@
+@import '../../styles/mixins';
+
 :host {
-  background-color: var(--app-background-color);
-  box-sizing: border-box;
-  display: block;
-  position: relative;
-  height: 400px;
-  top: 60px;
+  @include page-content;
 }
