--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,10 +2,10 @@
   align-items: center;
   background-color: var(--primary-color);
   box-sizing: border-box;
-  bottom: 100;
+  top: 50px;
   color: var(--text-color);
   display: flex;
-  height: 60px;
+  height: var(--banner-height);
   justify-content: space-between;
   left: 0;
   padding: 0 10px;
@@ -29,7 +29,7 @@ img {
 }
 
 #linkedin-logo {
-  height: 40px;
+  height: 30px;
   margin: 0 8px;
 }
 
