--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,21 +1,22 @@
 :host {
+  background-color: var(--primary-color);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.35);
   box-sizing: border-box;
+  color: var(--text-color);
+  display: flex;
+  font-weight: 600;
+  height: var(--banner-height);
+  justify-content: space-between;
+  left: 0;
+  padding-left: 20px;
   position: absolute;
   top: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: var(--primary-color);
-  color: var(--text-color);
-  font-weight: 600;
-  padding-left: 20px;
   width: 100%;
+  z-index: 10;
 
   .site-title {
     cursor: pointer;
+    margin: auto 0;
   }
 }
 
