--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -1,10 +1,7 @@
+@import '../../styles/mixins';
+
 :host {
-  background-color: var(--app-background-color);
-  box-sizing: border-box;
-  display: block;
-  position: relative;
-  height: 400px;
-  top: 60px;
+  @include page-content;
 }
 
 .setting-option {
