Builds out portfolio structure
Adds interfaces and structure to start displaying projects in my
portfolio. Adds all images and styling to support it.

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,3 @@
-<div>Portfolio details coming soon</div>
+<app-portfolio-item
+  *ngFor="let project of projects"
+  [project]="project"></app-portfolio-item>
