--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,157 @@
+<h1>Professional Experience</h1>
+<div *ngFor="let exp of experience">
+  <h2>{{ exp.company }}</h2>
+  <span>{{ exp.startDate }} - {{ exp.endDate }}</span>
+  <p>{{ exp.description }}</p>
+  <ul>
+    <li *ngFor="let resp of exp.keyResponsibilities">{{ resp }}</li>
+  </ul>
+  <div class="logos-container">
+    <img class="tech-logo"
+         *ngFor="let tech of exp.technologies"
+         src="{{ tech.logo }}"
+         alt="{{ tech.name }}"
+         title="{{ tech.name }}">
+  </div>
+</div>
 <div>
-  <h1>Welcome to my personal website! Development is still in progressed. Stayed tuned for updates!</h1>
+  <h2>Computer Aid, Inc. (CAI)</h2>
+  <span>May 2019 - November 2021</span>
+
+  <p>I acted as a swiss army knife for CAI, performing numerous disparate roles. I kept pace with an ever growing workload and pushed forward numerous new initiatives to drive growth for the company.</p>
+
+  <h3>Technical Delivery Analyst</h3>
+
+  <ul>
+    <li>Managed various customer relationships and accounts</li>
+    <li>Developed the entire customer onboarding process for an enterprise software solution</li>
+    <li>Implemented and configured TrueProject, an enterprise application, for customers and partners</li>
+    <li>Planned, developed and delivered a single project offering with the TrueProject solution for numerous customers</li>
+    <li>Processed customer support and feature requests tracking them in both ServiceNow and Jira</li>
+    <li>Developed the training materials and guides for new partners and customers</li>
+    <li>Handled all customization requests and delivers professional services based upon customer needs</li>
+    <li>Planned requirements and direction of ongoing enhancements to SaaS application</li>
+    <li>Led the automation of manual assessment creation process reducing completion time by 90%</li>
+    <li>Refined the entire implementation process for enterprise software reducing duration by 50%</li>
+  </ul>
+
+  <h3>Frontend Developer</h3>
+
+  <ul>
+    <li>Certified MicroStrategy Analyst responsible for developing BI dashboards and reports</li>
+    <li>Created and implemented an entire family of dashboards using MicroStrategy Dossier</li>
+    <li>Designed the overall user experience for the TrueProject application embedding MicroStrategy</li>
+    <li>Planned the links and navigation path through the application leading customers to valuable insights</li>
+    <li>Developed Angular dashboards for end-user consumption</li>
+    <li>Built customer requested assessments for use in an enterprise application</li>
+  </ul>
+
+  <h3>Director of CAI's Global Alliance of IT Firms</h3>
+
+  <ul>
+    <li>Reported directly to the CEO and SVP driving the growth, strategy, and direction of the initiative's partnerships and sales</li>
+    <li>Lead salesperson for the expansion of membership acquiring 15 new members in 4 month time frame</li>
+    <li>Designed the strategic model for building a consortium of international technology firms</li>
+    <li>Developed entire value proposition and business plan for increasing membership</li>
+    <li>Served as the main point of contact for members and partners</li>
+    <li>Built business partnerships with international and US firms by connecting with senior executives</li>
+    <li>Designed the requirements for and facilitates the creation of a website for members to interact</li>
+    <li>Developed the onboarding process for new members</li>
+  </ul>
+
+  <h3>Events Chair of Future Leaders ERG</h3>
+
+  <ul>
+    <li>Steering committee member for the Future Leaders Employee Resource Group (ERG)</li>
+    <li>Led presentations, events, and initiatives promoting a community-driven workplace</li>
+    <li>Healthy Lifestyles Committee member promoting health and wellness in the workplace</li>
+    <li>Planned and created health newsletters, events, and journals</li>
+    <li>Led the creation of a corporate Toastmasters club serving as Secretary</li>
+  </ul>
+
+  <h1>Internships</h1>
+
+  <h2>Merck Cloud Services Summer Intern</h2>
+  <span>Summer 2018</span>
+
+  <ul>
+    <li>Worked on an auto-remediation script using AWS Lambda triggered automatically upon alert from 3rd party security software</li>
+    <li>Incremented the functionality of the access control system used in the AWS environment</li>
+    <li>Created various other tool scripts for collecting data about services running through AWS</li>
+  </ul>
+
+  <h2>Web Developer in Partnership with Merck</h2>
+  <span>Summer 2016 & 2017</span>
+  <ul>
+    <li>Collaborated on a health IoT project for raspberry pi leveraging the capabilities of Alexa and Google Home</li>
+    <li>Worked with Flask to redefine the API for a preexisting system.</li>
+    <li>Leveraged Docker in order to turn a system with parts running on multiple machines into one where everything runs on the same machine.</li>
+    <li>Worked with other students to improve a web application called Home Healthkit. The Home Healthkit is a system that allows doctors to store all of a patient's vitals in one place. The system leveraged the capabilities of a Raspberry Pi 3, making it very portable.</li>
+    <li>Collaborated with employees of Merck on a weekly basis</li> 
+    <li>Assisted in the creation of a project proposal to Merck</li>
+  </ul>
+
+  <h1>Education</h1>
+
+  <h2>Moravian University</h2>
+  <span>Fall 2015 - Spring 2019</span>
+
+  <h3>Academic Career</h3>
+  <ul>
+    <li>Graduated with a 4.0 GPA</li>
+    <li>Holds a BS in Computer Science</li>
+    <li>Majored in Economics and Minored in Math</li>
+    <li>Member of 5 honor societies</li>
+    <ul>
+      <li>Omicron Delta Kappa (ODK)</li>
+      <li>Eta Sigma (PES)</li>
+      <li>Chi Alpha Sigma (CAS)</li>
+      <li>Omicron Delta Epsilon (ODE)</li>
+      <li>Alpha Alpha Alpha (AAA)</li>
+    </ul>
+  </ul>
+
+  <h3>Athletic Career</h3>
+  <ul>
+    <li>4 year starter for the Moravian football team recording 200+ tackles and 8 interceptions</li>
+    <li>2 year team captain at Moravin</li>
+    <li>Academic All-American 1st team (2017, 2018)</li>
+    <li>Centennial Conference Scholar-Athlete of the Year (2017)</li>
+  </ul>
+
+  <h3>Campus Involvement</h3>
+  <ul>
+    <li>Economics, Mathematics, and Computer Science tutor (4-10 hours/week)</li>
+    <li>Senior Class Gift Committee member helping organize events and encourage donations</li>
+    <li>Member of Omicron Gamma Omega (OGO) for 7 semesters</li>
+    <ul>
+      <li>Vice President for 4 semesters</li>
+      <li>Academic Chair for 2 semesters</li>
+      <li>Contributed to 10% increase in organizational GPA</li>
+    </ul>
+  </ul>
+
+  <h2>Parkland High School</h2>
+  <span>Fall 2011 - Spring 2015</span>
+
+  <h3>Academic Career</h3>
+  <ul>
+    <li>Graduated with >4.0 GPA</li>
+    <li>Member of the National Honor Society</li>
+    <li>Member of the National English Honor Society</li>
+  </ul>
+  <h3>Athletic Career</h3>
+  <h4>Track & Field</h4>
+  <ul>
+    <li>3x varsity letter winner</li>
+    <li>Voted team MVP senior season</li>
+    <li>Competed regularly in 5 different events (300m hurdles, 4x400m relay 4x800m relay, 400m, 800m)</li>
+  </ul>
+  <h4>Football</h4>
+  <ul>
+    <li>2 year starter at Defensive Back</li>
+    <li>Played WR and QB on offense</li>
+    <li>3x varsity letter winner at Parkland</li>
+    <li>3x District champion</li>
+  </ul>
 </div>
