--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
   left: 0;
   padding-left: 20px;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 10;
