Replaces connect page with interests
Migrate the connect component to being re-usable on any page. Bring in
more images to reduce text on the connect component. Create component to
wrap linkedIn button and re-use easily. Adjusts nav menu to not display
by default on small screens and to close once an item is clicked. Adds
interests component and page stub.

--- a/src/app/connect/connect.component.html
+++ b/src/app/connect/connect.component.html
@@ -1,1 +1,13 @@
-<div>Connect with me details coming soon</div>
+<h3>Connect with Me</h3>
+<div>
+  <app-linkedin></app-linkedin>
+  <a href="mailto: zambeezy008@gmail.com">
+    <img src="assets/logos/gmail.png" />
+  </a>
+  <a href="https://www.instagram.com/zamb33zy/" target="_blank" rel="noopener">
+    <img src="assets/logos/instagram.png" />
+  </a>
+  <a href="https://twitter.com/ZAMB33ZY" target="_blank" rel="noopener">
+    <img src="assets/logos/x.png" />
+  </a>
+</div>
