--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -3,8 +3,8 @@
 </button>
 
 <div *ngIf="showNavOptions" class="nav-options">
-  <button class="nav-btn" [routerLink]="['/about']">About Me</button>
-  <button class="nav-btn" [routerLink]="['/portfolio']">Portfolio</button>
-  <button class="nav-btn" [routerLink]="['/connect']">Connect</button>
-  <button class="nav-btn" [routerLink]="['/settings']" >Settings</button>
+  <button class="nav-btn" (click)="selectMenuOption('/about')">About</button>
+  <button class="nav-btn" (click)="selectMenuOption('/portfolio')">Portfolio</button>
+  <button class="nav-btn" (click)="selectMenuOption('/interests')">Interests</button>
+  <button class="nav-btn" (click)="selectMenuOption('/settings')">Settings</button>
 </div>
