--- a/src/app/connect/connect.component.scss
+++ b/src/app/connect/connect.component.scss
@@ -1,5 +1,12 @@
-@import '../../styles/mixins';
+@import '../../styles/mixins.scss';
 
 :host {
-  @include page-content;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+img {
+  @include standard-img;
 }
