--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -1,5 +1,18 @@
 <h3>Fitness</h3>
+<p>Playing sports my entire life build a strong foundation for physical fitness for me. I continue that as one of my primary passions to do this. I believe that without a healthy body, we cannot achieve even half of what we are capable of. My personal approach to mix in different types of exercises to created a well-rounded level of fitness. I will frequently lift, run sprints, run long distances, swim, ski, box, and hike. I love challenging my body and testing the limits of what I can do.</p>
+
 <h3>Golf</h3>
+<p>I picked up golf at 22 after graduating college and have loved it ever since. I enjoy the challenge the game presents both mentally and physcially. In just 4 years of playing, I have improved my game to consistently shoot in the 80s and on my best days, in the 70s. You will never find my on the course with a bad attitude even on my worst days.</p>
+
 <h3>Reading</h3>
+<p>I love reading. I read a lot of non-fiction books on business, psychology, and self-improvement.</p>
+
 <h3>Painting</h3>
+<p>Expressing myself creatively is something that I recently started to explore. Painting is a fantastic release because it allows me to create something tangible. Creating art helps free mind of any stresses and explore areas within myself that I never knew existed.</p>
+
 <h3>Entrepreneurship</h3>
+<p>I realize that in this world, we need more than one income to succeed and provide a life for out families. I am open to exploring various avenues for learning and increasing my income levels.</p>
+<ul>
+  <li>Energy Drinks</li>
+  <li>CBD Cream</li>
+</ul>
