--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="showNavOptions" class="nav-options">
   <button class="nav-btn" (click)="selectMenuOption('/about')">About</button>
+  <button class="nav-btn" (click)="selectMenuOption('/experience')">Experience</button>
   <button class="nav-btn" (click)="selectMenuOption('/portfolio')">Portfolio</button>
-  <button class="nav-btn" (click)="selectMenuOption('/interests')">Interests</button>
   <button class="nav-btn" (click)="selectMenuOption('/settings')">Settings</button>
 </div>
