--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -16,3 +16,14 @@
     opacity: 0.8;
   }
 }
+
+@mixin card {
+  align-items: center;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  box-shadow: 2px 2px 5px var(--secondary-color);
+  margin: 10px 0;
+  box-sizing: border-box;
+}
