--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,7 @@ body {
   --secondary-btn-text: #333;
   --button-hover-bg: #EEE;
   --app-background-color: #FFF;
+  --shadow-color: #999;
 
   --banner-height: 50px;
 }
@@ -24,4 +25,5 @@ body.dark {
   --secondary-btn-text: #FFF;
   --button-hover-bg: #999;
   --app-background-color: #333;
+  --shadow-color: #aaa;
 }
