--- a/src/app/portfolio/portfolio-item/portfolio-item.component.scss
+++ b/src/app/portfolio/portfolio-item/portfolio-item.component.scss
@@ -1,10 +1,7 @@
+@import '../../../styles/mixins';
+
 :host {
-  align-items: center;
-  border: 1px solid var(--primary-color);
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
+  @include card;
 }
 
 .project-header {
