--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -3,3 +3,12 @@
 :host {
   @include page-content;
 }
+
+.exp-item {
+  @include card;
+  padding-bottom: 0;
+}
+
+.technologies {
+  @include card-bottom;
+}
