Adds toggle for changing fonts and styles

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -6,6 +6,7 @@
   <ul>
     <li *ngFor="let resp of exp.keyResponsibilities">{{ resp }}</li>
   </ul>
+  <h4>Technologies & Languages</h4>
   <div class="technologies">
     <img class="tech-logo"
          *ngFor="let tech of exp.technologies"
