--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -5,10 +5,22 @@
 }
 
 .setting-option {
+  align-items: center;
+  display: flex;
   padding: 20px;
+
   span {
     color: var(--text-color);
     font-size: 16px;
-    padding-right: 20px;
+    padding-right: 40px;
+  }
+
+  mat-select {
+    // border: 1px solid var(--secondary-color);
+    border-radius: 8px;
+    box-shadow: 1px 1px 3px var(--shadow-color);
+    box-sizing: border-box;
+    padding: 5px 10px;
+    width: 200px;
   }
 }
