--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ body {
   --secondary-color: #FBA165;
   --tertiary-color: #86DAF2;
   --text-color: #333;
+  --secondary-text-color: white;
   --primary-btn-color: #F65C40;
   --primary-btn-text: #FFF;
   --secondary-btn-color: #FFF;
@@ -21,6 +22,7 @@ body.dark {
   --secondary-color: white;
   --tertiary-color: #333;
   --text-color: white;
+  --secondary-text-color: #333;
   --primary-btn-color: #BAFAFF;
   --primary-btn-text: black;
   --secondary-btn-color: white;
