--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,11 +1,14 @@
 <div *ngFor="let exp of experience" class="exp-item">
-  <h2>{{ exp.company }}</h2>
-  <h6 *ngIf="exp.type === 'intern'">Internship</h6>
-  <span>{{ exp.startDate }} - {{ exp.endDate }}</span>
+  <h1>{{ exp.company }}</h1>
+  <h3>{{ exp.title }}</h3>
+  <span>{{ exp.startDate }} - {{ exp.endDate }} {{ exp.type === 'intern' ? '(Internship)' : '' }}</span>
   <p>{{ exp.description }}</p>
-  <ul>
-    <li *ngFor="let resp of exp.keyResponsibilities">{{ resp }}</li>
-  </ul>
+  <div>
+    <h3>Key Responsibilities</h3>
+    <ul>
+      <li *ngFor="let resp of exp.keyResponsibilities">{{ resp }}</li>
+    </ul>
+  </div>
   <h4>Technologies & Languages</h4>
   <div class="technologies">
     <img class="tech-logo"
