--- a/src/app/portfolio/portfolio-item/portfolio-item.component.html
+++ b/src/app/portfolio/portfolio-item/portfolio-item.component.html
@@ -2,18 +2,24 @@
   <a class="project-logo" href="{{ project.link }}" target="_blank" rel="noopener">
     <img id="{{ project.key }}-logo" src="{{ project.logo }}" alt="{{ project.name }}" />
   </a>
-
   <h1>{{ project.name }}</h1>
+  <a class="project-logo" href="{{ project.link }}" target="_blank" rel="noopener">
+    <img id="{{ project.key }}-logo" src="{{ project.logo }}" alt="{{ project.name }}" />
+  </a>
 </div>
 
 <div class="project-details">
-  <p>{{ project.description }}</p>
-  <h3>My Role</h3>
-  <ul>
-    <li *ngFor="let resp of project.responsibilities">
-      {{ resp }}
-  </ul>
-
+  <div>
+    <h3>Project Overview</h3>
+    <p>{{ project.description }}</p>
+  </div>
+  <div>
+    <h3>Key Responsibilities</h3>
+    <ul>
+      <li *ngFor="let resp of project.responsibilities">
+        {{ resp }}
+    </ul>
+  </div>
 </div>
 
 <h4>Technologies & Languages</h4>
