--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,3 +19,8 @@ span, p, ul, ol, h1, h2, h3, h4, h5, h6 {
 button {
   font-family: var(--font-family);
 }
+
+a {
+  color: var(--text-color);
+  font-style: italic;
+}
