--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -23,19 +23,23 @@ img {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    margin: 5px;
-    padding: 10px;
+    margin: 10px;
+    padding: 15px;
+
+    .pillar-name {
+      font-size: 24px;
+    }
+
+    h3, span {
+      color: var(--secondary-text-color) !important;
+      text-align: center;
+    }
 
     mat-icon {
       color: var(--secondary-text-color) !important;
       font-size: 50px;
       height: 50px;
       width: 50px;
-    }
-
-    h3, span {
-      color: var(--secondary-text-color) !important;
-      text-align: center;
     }
   }
 }
