--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,16 +11,11 @@ body {
   margin: 0;
 }
 
-span, p, ul, ol, h1, h2, h3, h4, h5, h6 {
+span, p, ul, ol, h1, h2, h3, h4, h5, h6, a {
   color: var(--text-color);
   font-family: var(--font-family);
 }
 
 button {
   font-family: var(--font-family);
-}
-
-a {
-  color: var(--text-color);
-  font-style: italic;
 }
