--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,3 +1,5 @@
+<h3>What better way to show off the modularity and configurability that I strive for in all my work? Change these settings however you like to make your experience on my site unique. Imagine what can be done with your vision!</h3>
+
 <div class="setting-option">
   <span>Dark Mode</span>
   <mat-slide-toggle
