--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
-<h1>Welcome and thank you for visiting my website!</h1>
+<h1>Welcome! Thank you for visiting my website!</h1>
 
-<p>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/settings">settings</a> and make your experience unique!</p>
+<h3>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/settings">settings</a> to make your experience unique!</h3>
 
 <div class="pillars">
   <div class="site-pillar">
@@ -28,43 +28,49 @@
   </div>
 </div>
 
-<h2>Let's build something beautiful together. Close collaboration helps me turn your vision into a reality!</h2>
+<h2>Let's build something beautiful together. I love working with you to help me turn your vision into a reality. Nothing gets me more excited than solving a complex problem and delivering a solution you'll love.</h2>
 
 <app-connect></app-connect>
 
-<p>I am a skilled and passionate human being who pursuits a variety of interests. I live life to the fullest and have an endless amount of drive. My career in software engineering is just getting. I am extremely driven, constantly seeking to solve problem in the most efficient and elegant way. You will find that although I do not have the most experience, I am still a world class engineer. My primary skill is frontend development and I am more than capable of working the full stack. I am constantly learning and growing, always looking to expand my knowledge. I find myself constantly challenging to status quo and striving to do things in the most effective and robust way possible. Outside of my career, I love staying active and am extremely passioante about my health. As a former collegiate football player, I know how import it is to take care of yourself.</p>
+<h3>Who the heck am I?</h3>
+<p>I am a problem solver, life liver, and go getter. I find great satisfaction in finding the most effective solution to any challenge. You will find that I am driven, well organized, and extremely effective. I have learned a variety of skills from my experience as an athlete, collegiate football player, professional and adventurer. When I'm not working, I love to exercise and compete. I am a passionate golfer. I enjoy hiking, skiing, lifting and running. I am reader, painter and a student of life. Every day is an opportunity to develop myself as a human and grow into a better man than the day before.</p>
+
 <div *ngFor="let edu of education" class="edu-item">
-  <h2>{{ edu.name }}</h2>
-  <img src="{{ edu.logo }}" alt="{{ edu.name }}" title="{{ edu.name }}" />
-  <h4>{{ edu.location }}</h4>
-  <span>{{ edu.startDate }} - {{ edu.endDate }}</span>
-
-  <h6>Achievements</h6>
-  <ul>
-    <li *ngFor="let ach of edu.achievements">{{ ach }}</li>
-  </ul>
-
-  <h6>Athletics</h6>
-  <div *ngFor="let sport of edu.athletics">
-    <span>{{ sport.name }}</span>
-    <span>{{ sport.positions }}</span>
-    <span>{{ sport.years }}</span>
-
-    <h6>Achievements</h6>
-    <ul>
-      <li *ngFor="let ach of sport.achievements">{{ ach }}</li>
-    </ul>
+  <div class="edu-header">
+    <span>{{ edu.startDate }} - {{ edu.endDate }}</span>
+    <h1>{{ edu.name }}</h1>
+    <img src="{{ edu.logo }}" alt="{{ edu.name }}" title="{{ edu.name }}" />
+    <h4>{{ edu.location }}</h4>
   </div>
 
-  <div *ngIf="edu.extraCirriculars.length">
-    <h6>Extra Cirriculars</h6>
-    <div *ngFor="let extra of edu.extraCirriculars">
-      <span>{{ extra.description }}</span>
+  <div class="edu-details">
+    <div class="edu-section">
+      <h3>Academic Achievements</h3>
       <ul>
-        <li *ngFor="let detail of extra.details">{{ detail }}</li>
+        <li *ngFor="let ach of edu.achievements">{{ ach }}</li>
       </ul>
     </div>
+  
+    <div class="edu-section" *ngFor="let sport of edu.athletics">
+      <h3>{{ sport.name }}</h3>
+      <h5>Years: {{ sport.years }}</h5>
+      <h5>{{ sport.name === 'Track & Field' ? 'Events:' : 'Positions:' }} {{ sport.positions }}</h5>
+  
+      <ul>
+        <li *ngFor="let ach of sport.achievements">{{ ach }}</li>
+      </ul>
+    </div>
+  
+    <ng-container *ngIf="edu.extraCirriculars.length">
+      <div class="edu-section" *ngFor="let extra of edu.extraCirriculars">
+        <h3>{{ extra.description }}</h3>
+        <ul>
+          <li *ngFor="let detail of extra.details">{{ detail }}</li>
+        </ul>
+      </div>
+    </ng-container>
   </div>
+
    
 </div>
 
