--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,31 @@
-<app-portfolio-item
-  *ngFor="let project of projects"
-  [project]="project"></app-portfolio-item>
+<a *ngFor="let project of projects" class="portfolio-item" href="{{ project.link }}" target="_blank" rel="noopener">
+  <div class="project-header">
+    <img id="{{ project.key }}-logo" src="{{ project.logo }}" alt="{{ project.name }}" />
+    <h1>{{ project.name }}</h1>
+    <img id="{{ project.key }}-logo" src="{{ project.logo }}" alt="{{ project.name }}" />
+  </div>
+
+  <div class="project-details">
+    <div>
+      <h3>Project Overview</h3>
+      <p>{{ project.description }}</p>
+    </div>
+    <div>
+      <h3>Key Responsibilities</h3>
+      <ul>
+        <li *ngFor="let resp of project.responsibilities">
+          {{ resp }}
+      </ul>
+    </div>
+  </div>
+
+  <h4>Technologies & Languages</h4>
+  <div class="technologies">
+    <img class="tech-logo"
+        *ngFor="let tech of project.technologies"
+        src="{{ tech.logo }}"
+        alt="{{ tech.name }}"
+        title="{{ tech.name }}">
+  </div>
+</a>
 <app-connect></app-connect>
