--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -85,15 +85,26 @@
 
 .edu-section {
   align-items: center;
-  border: 1px solid var(--secondary-color);
+  border-bottom: 1px solid var(--secondary-color);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  margin: 5px;
-  padding: 10px;
+  padding: 15px;
   width: 375px;
 
-  @media screen and (max-width: 749px) {
+  &:nth-of-type(odd) {
+    border-right: 1px solid var(--secondary-color);
+
+    @media screen and (max-width: 799px) {
+      border-right: none;
+    }
+  }
+
+  &:last-of-type {
+    border: none;
+  }
+
+  @media screen and (max-width: 799px) {
     width: 100%;
   }
 
