--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -118,3 +118,62 @@
 img {
   @include standard-img;
 }
+
+.who-am-i {
+  box-sizing: border-box;
+  margin: 100px 0;
+
+  .about-me {
+    h3 {
+      font-weight: normal;
+    }
+  }
+
+  .background-photos {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    li {
+      flex: auto;
+      height: 150px;
+      cursor: pointer;
+      position: relative;
+      list-style-type: none;
+      padding: 0;
+
+      @media screen and (min-width: 600px) {
+        height: 250px;
+      }
+    }
+    
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      vertical-align: middle;
+      margin: 0;
+      transition: transform .5s;
+
+
+      &:hover {
+        opacity: 1;
+        transform: scale(1.75);
+        box-shadow: 0px 0px 8px var(--shadow-color);
+        
+        position: relative;
+        z-index: 1;
+
+        &#first-personal-img {
+          transform: scale(1.75) translateX(20px);
+        }
+
+        &#last-personal-img {
+          transform: scale(1.75) translateX(-28px);
+        }
+      }
+    }
+  }
+}
