Small spelling and bug fixes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,13 +12,13 @@
   <div class="site-pillar">
     <mat-icon fontIcon="mobile_friendly"></mat-icon> 
     <h3 class="pillar-name">Responsive</h3>
-    <span>You can't reach all users if you cannot support any device</span>
+    <span>Reach as many users as possible with dynamic layouts fit for all devices</span>
   </div>
   
   <div class="site-pillar">
     <mat-icon fontIcon="view_module"></mat-icon> 
     <h3 class="pillar-name">Flexible</h3>
-    <span>We live in a word of constant change and our websites need to be ready</span>
+    <span>Change happens daily and my websites are always ready to adapt to your needs</span>
   </div>
   
   <div class="site-pillar">
