--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -18,8 +18,8 @@
 
   span {
     background-color: var(--secondary-color);
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+    border-top-left-radius: var(--default-border-radius);
+    border-top-right-radius: var(--default-border-radius);
     color: var(--secondary-text-color);
     padding: 10px;
     text-align: center;
