--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -19,7 +19,7 @@
 
 @mixin card {
   align-items: center;
-  border-radius: 8px;
+  border-radius: var(--default-border-radius);
   box-shadow: 2px 2px 5px var(--secondary-color);
   box-sizing: border-box;
   display: flex;
@@ -41,8 +41,8 @@
 
 @mixin card-bottom {
   background-color: var(--secondary-color);
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: var(--default-border-radius);
+  border-bottom-right-radius: var(--default-border-radius);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
   padding: 5px 10px;
