--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,8 @@ body {
   --banner-height: 50px;
 
   --font-family: 'Optima', 'sans-serif';
+
+  --default-border-radius: 8px;
 }
 
 body.dark {
@@ -46,4 +48,8 @@ body.chalky {
 
 body.marker {
   --font-family: 'Marker Felt', 'sans-serif';
+}
+
+body.corners {
+  --default-border-radius: 0px;
 }
